Rigid body stops simulating when an object is selected #64710

Closed
opened 2019-05-16 15:54:01 +02:00 by Luja Rajbhandari · 5 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: Intel(R) UHD Graphics 630 Intel 4.5.0 - Build 25.20.100.6373

Blender Version
Broken: version: 2.80 (sub 64), branch: master, commit date: 2019-05-15 23:47, hash: 02a7e57d9c
Worked: (optional)

Rigid body stops simulating when an object is selected. I really don't know if its a bug but it doesn't happen in 2.79. Also, it does not happen with other simulation like cloth, smoke, etc. I I've attached the screen recorded video below
2019-05-16 19-32-09.mp4

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: Intel(R) UHD Graphics 630 Intel 4.5.0 - Build 25.20.100.6373 **Blender Version** Broken: version: 2.80 (sub 64), branch: master, commit date: 2019-05-15 23:47, hash: `02a7e57d9c` Worked: (optional) Rigid body stops simulating when an object is selected. I really don't know if its a bug but it doesn't happen in 2.79. Also, it does not happen with other simulation like cloth, smoke, etc. I I've attached the screen recorded video below [2019-05-16 19-32-09.mp4](https://archive.blender.org/developer/F7041156/2019-05-16_19-32-09.mp4)

Added subscriber: @LujaRajbhandari

Added subscriber: @LujaRajbhandari

Added subscriber: @grosgood

Added subscriber: @grosgood

I see this too.

Running Blender in a shell with --depsgraph option shows a depsgraph update at the frame corresponding to the mouse-click select. As a matter of course, that depsgraph update exhibits USER_EDIT change sources, and copy_on_write and layer_update logical functions are placed in the update list. I surmise (but I have not established a causality chain) that transform calculations are invalidated as a side effect, disrupting a cache entry at the mouse click on frame T. By the
nature of simulations, if data are not available for frame T, then T+1, T+2... can't be calculated, giving rise to the original observation. The depsgraph evaluation time also drops dramatically. For about 100 objects in the simulation I experimented with, depsgraph update for me ran about 0.02 seconds on average before the offending mouse selection attempt. Subsequent to that, depsgraph evaluation dropped an order of magnitude to 0.002 seconds, on average. Of course, no position or rotational transformations were taking place, gravity was suspended, etc. One could see in the depsgraph dumps to the shell that transform functions were being called, but I surmise they were virtually no-ops, returning immediately upon being called. I did not step through a typical call to confirm this.

There seems to be a trivial workaround. Should I hold off selecting anything while the cache is being built, then, after a cache is wholly in place, I can select objects with the animation running and the animation doesn't freeze. The simulation has actually finished at that point and the animation is running off the cache.

 
I see this too. Running Blender in a shell with --depsgraph option shows a depsgraph update at the frame corresponding to the mouse-click select. As a matter of course, that depsgraph update exhibits USER_EDIT change sources, and copy_on_write and layer_update logical functions are placed in the update list. I surmise (but I have not established a causality chain) that transform calculations are invalidated as a side effect, disrupting a cache entry at the mouse click on frame T. By the nature of simulations, if data are not available for frame T, then T+1, T+2... can't be calculated, giving rise to the original observation. The depsgraph evaluation time also drops dramatically. For about 100 objects in the simulation I experimented with, depsgraph update for me ran about 0.02 seconds on average before the offending mouse selection attempt. Subsequent to that, depsgraph evaluation dropped an order of magnitude to 0.002 seconds, on average. Of course, no position or rotational transformations were taking place, gravity was suspended, etc. One could see in the depsgraph dumps to the shell that transform functions were being called, but I surmise they were virtually no-ops, returning immediately upon being called. I did not step through a typical call to confirm this. There seems to be a trivial workaround. Should I hold off selecting anything while the cache is being built, then, after a cache is wholly in place, I can select objects with the animation running and the animation doesn't freeze. The simulation has actually finished at that point and the animation is running off the cache. ```
Sergey Sharybin was assigned by Sebastian Parborg 2019-06-11 17:37:03 +02:00

This issue was referenced by 27441c7557

This issue was referenced by 27441c75573874c91a4fb71da993e7c7fb306a2c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64710
No description provided.