Fix T64710: Rigid body stops simulating when an object is selected

Need to preserve last evaluated time through copy-on-write process.